[package]
name = "isabelle-markup"
version = "0.1.0"
authors = ["Jakub Kądziołka <kuba@kadziolka.net>"]
# Same license as Isabelle, as it can probably be considered a derivative work
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
argh = "0.1.4"
html-escape = "0.2.6"
once_cell = "1.5.2"
regex = "1.4.3"
itertools = "0.10.0"

[dependencies.yxml]
version = "0.1"
path = "yxml"

[workspace]
members = ["yxml"]
